# public

./: .gitignore  LICENSE  README.md  SECURITY.md  WARRANTY
.github/workflows/: azure-static-web-apps.yml  pages.yml
example/: README.md  WARRANTY  package.json  pom.xml  run-review.sh  run-sonarqube-example.sh
example/documentation/: ai-development-claude.html  ai-development-codex.html  ai-development-continue-vscode.html  ai-development-continue.html  ai-development-copilot.html  ai-development-mcp.html  ai-development-models-modes.html  ai-development-ollama.html  ai-development-temperature.html  ai-development-vscode-settings.html  ai-development-vscode.html  ai-development-workflow.html  ai-development.html  github-workflow-azure-static-web-apps.html  index.html  nav-loader.js  process-governance.html  process-milestones.html  process-pdca.html  process.html  review-agent-cpp.html  review-agent-csharp.html  review-agent-java.html  review-agent-react.html  review-agent-rust.html  review-agent-typescript.html  review-architecture.html  review-instructions.html  review-overview.html  review-samples.html  styles.css
example/sample-apps/: README.md
math2/: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONTINUE.md  DEEPSEEK.md  README.md  open-tabs.sh  pom.xml  run-dev-local.sh  run-smoke-test.sh  stop-dev-local.sh  test-all.sh  test-client-integration.sh  test-java.sh
math2/cpp-api/: CMakeLists.txt  README.md
math2/cpp-api/include/math2/: math2.hpp
math2/cpp-api/src/: math2.cpp
math2/cpp-api/tests/: math2_test.cpp
math2/documentation/: api.html  (+20 more)
(+163 files in other folders)
